kuber/django-app-ingress.yaml
apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    name: ingress-django
    annotations:
      nginx.ingress.kubernetes.io/rewrite-target: /
  spec:
    rules:
      - host: star-burger.info
        http:
          paths:
            - path: /
              pathType: Prefix
              backend:
                service:
                  name: django-deploy
                  port:
                    number: 80
